2001-03-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (transmit): Check peer->unreach.
	(peer_clear): peer->outdate is a f(BURST_INTERVAL1), not
	NTP_MINPOLL.
	* ntpd/ntp_loopfilter.c (local_clock): mode_ntpdate stuff.
	* ntpd/ntp_crypto.c: OpenSSL/RSAREF support.
	* ntpd/cmd_args.c: Use -q, not -z, for mode_ntpdate.
	(getstartup): nofork on mode_ntpdate. Usage update.
	* include/ntp_crypto.h: OpenSSL/RSAREF support.
	From: Dave Mills.

	* configure.in (rsaref): Buglet.

2001-03-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (clock_update): mode_ntpdate support.
	* ntpd/ntp_loopfilter.c	(local_clock): mode_ntpdate support.
	* ntpd/cmd_args.c: Added -z (mode_ntpdate).
	* include/ntpd.h: mode_ntpdate added.
	* include/ntp_crypto.h: RSAREF/OPENSSL cleanup.
	From: Dave Mills.

2001-03-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* config.h.in:
	* aclocal.m4:
	* configure.in: Prepare for OpenSSL support

2001-03-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* README.rsa: Note that RSAEURO will not work.
	Reported by: pieter.delacourt@banksys.be

2001-03-25  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/ntp_if.h: 
	* include/ntp_machine.h:
	* include/ntp_unixtime.h: 
	* libntp/humandate.c: 
	* libntp/iosignal.c: 
	* libntp/mktime.c: 
	* libntp/prettydate.c: 
	* libntp/systime.c: 
	* libntp/tvtoa.c: 
	* libntp/uglydate.c: 
	* libntp/utvtoa.c: 
	* libparse/clk_computime.c: 
	* libparse/clk_dcf7000.c: 
	* libparse/clk_hopf6021.c: 
	* libparse/clk_meinberg.c: 
	* libparse/clk_rawdcf.c: 
	* libparse/clk_rcc8000.c: 
	* libparse/clk_schmid.c: 
	* libparse/clk_trimtaip.c: 
	* libparse/clk_trimtsip.c: 
	* libparse/clk_varitext.c: 
	* libparse/parse.c: 
	* libparse/parse_conf.c: 
	* ntpd/check_y2k.c: 
	* ntpd/ntp_config.c: 
	* ntpd/ntp_control.c: 
	* ntpd/ntp_intres.c: 
	* ntpd/ntp_io.c: 
	* ntpd/ntp_loopfilter.c: 
	* ntpd/ntp_monitor.c: 
	* ntpd/ntp_proto.c: 
	* ntpd/ntp_refclock.c: 
	* ntpd/ntp_request.c: 
	* ntpd/ntp_resolver.c: 